[package]
name = "bertie"
version = "0.1.0-pre.2"
authors = ["Karthikeyan Bhargavan <karthik@cryspen.com>"]
license = "Apache-2.0"
edition = "2021"
documentation = "https://docs.rs/bertie"
description = "Minimal TLS 1.3 implementation"
readme = "README.md"
repository = "https://github.com/cryspen/bertie"

[lib]
path = "src/lib.rs"

[dependencies]
backtrace = "0.3.0"
rand = "0.8.0"
hex = "0.4.3"
tracing = "0.1"
libcrux = { version = "0.0.2-pre.2", features = ["rand"] }

[features]
default = ["api"]
test_utils = []
secret_integers = []
api = []             # The streaming Rust API that everyone should use but is not hacspec.

[dev-dependencies]
bertie = { path = ".", features = ["test_utils"] }
dhat = "0.3.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.3.0"
criterion = "0.5"

[[bench]]
name = "client"
harness = false

[[bench]]
name = "server"
harness = false

[workspace]
members = [
    ".",
    "record",
    "simple_https_client",
    "simple_https_server",
    "bogo_shim",
    "integration_tests",
]

default-members = [
    ".",
    "record",
    "simple_https_client",
    "simple_https_server",
    "bogo_shim",
    "integration_tests",
]

# [patch.crates-io]
# libcrux = { path = "../libcrux" }
