[package]
name = "bertie"
version = "0.1.0-pre.2"
authors = ["Karthikeyan Bhargavan <karthik@cryspen.com>"]
license = "Apache-2.0"
edition = "2021"
documentation = "https://docs.rs/bertie"
description = "Minimal TLS 1.3 implementation"
readme = "README.md"
repository = "https://github.com/cryspen/bertie"

[lib]
path = "src/lib.rs"

[dependencies]
backtrace = "0.3.0"
rand = "0.9"
hex = "0.4.3"
tracing = "0.1"
libcrux-kem = { version = "0.0.2-beta.3", git = "https://github.com/cryspen/libcrux", features = [
    "kyber",
] }
libcrux-sha2 = { version = "0.0.2-beta.3", git = "https://github.com/cryspen/libcrux" }
libcrux-hmac = { version = "0.0.2-beta.3", git = "https://github.com/cryspen/libcrux" }
libcrux-hkdf = { version = "0.0.2-beta.3", git = "https://github.com/cryspen/libcrux" }
libcrux-chacha20poly1305 = { version = "0.0.2-beta.3", git = "https://github.com/cryspen/libcrux" }
libcrux-rsa = { version = "0.0.2-beta.3", git = "https://github.com/cryspen/libcrux" }
libcrux-ed25519 = { version = "0.0.2-beta.3", git = "https://github.com/cryspen/libcrux" }
libcrux-ecdsa = { version = "0.0.2-beta.3", git = "https://github.com/cryspen/libcrux", features = [
    "rand",
] }
#hax-lib = { version = "0.2", git = "https://github.com/cryspen/hax" }
hax-lib = { git = "https://github.com/cryspen/hax", branch = "bertie-libs"}

[features]
default = ["api", "std"]
std = []
test_utils = []
secret_integers = []
api = []
hax-fstar = []
hax-pv = []

[dev-dependencies]
bertie = { path = ".", features = ["test_utils"] }
dhat = "0.3.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.3.0"
criterion = "0.5"
psm = "0.1.24"
bytesize = "1.3.0"

[[bench]]
name = "client"
harness = false

[[bench]]
name = "client_stack"
harness = false

[[bench]]
name = "server"
harness = false

[workspace]
members = [
    ".",
    "record",
    "simple_https_client",
    "simple_https_server",
    "bogo_shim",
    "integration_tests",
]

default-members = [
    ".",
    "record",
    "simple_https_client",
    "simple_https_server",
    "bogo_shim",
    "integration_tests",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(bench)'] }
