[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bertie = { version = "0.1.0-pre.2", path = ".." }
libcrux-platform = { git = "https://github.com/cryspen/libcrux" }
tracing-subscriber = "0.3"

[dev-dependencies]
rand = "0.9"
