[package]
name = "simple_https_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tls13client"
path = "src/tls13client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bertie = { path = "../" }
evercrypt_cryptolib = { git = "https://github.com/cryspen/utils", optional = true, package = "evercrypt_cryptolib" }
hacspec_cryptolib = { git = "https://github.com/cryspen/utils", optional = true, package = "hacspec_cryptolib" }
hacspec-dev = { git = "https://github.com/hacspec/hacspec", package = "hacspec-dev" }
hacspec-lib = { git = "https://github.com/hacspec/hacspec", package = "hacspec-lib" }
hex = "0.4.3"
rand = "0.8.0"
record = { path = "../record" }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["hacspec"]
evercrypt = ["evercrypt_cryptolib"]
hacspec = ["hacspec_cryptolib"]
