[package]
name = "simple_https_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tls13client"
path = "src/tls13client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bertie = { path = "../" }
libcrux = { git = "https://github.com/cryspen/libcrux", features = ["rand"] }
hex = "0.4.3"
rand = "0.8.0"
record = { path = "../record" }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4.8", features = ["derive"] }
