[package]
name = "simple_https_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tls13server"
path = "src/tls13server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bertie = { path = "../" }
rand = "0.8.0"
record = { path = "../record" }
tracing-subscriber = "0.3"
simple_https_client = { version = "0.1.0", path = "../simple_https_client" }
clap = { version = "4.4.8", features = ["derive"] }
